Remove gradient because it needs to be fixed for Safari users

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 5px;
+    gap: 5px 0px;
 }
 
 .image {
@@ -39,6 +39,10 @@ a {
     text-transform: uppercase;
 }
 
+.filler {
+    opacity: 0;
+}
+
 /*for testing*/
 .ball {
     position: absolute;
@@ -51,7 +55,7 @@ a {
     width: 200px;
   }
 
-  body {
+  /*body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
@@ -67,4 +71,4 @@ a {
     100% {
     background-position: 0% 50%;
     }
-    }
+    }*/
